--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <meta property="og:title" content="Anushka Perera | Full-Stack Developer Portfolio">
+    <meta property="og:description" content="Explore my latest web projects, UI/UX designs, and technical skills.">
+    <meta property="og:image" content="images/portfolio-preview.png"> 
+    <meta property="og:url" content="https://yourlink.com">
+
+    <title>Anushka Perera | Full-Stack Developer Portfolio</title>
     <!-- Basic Icons -->
     <link href="https://cdn.boxicons.com/3.0.8/fonts/basic/boxicons.min.css" rel="stylesheet">
     <!-- Filled Icons -->
