--- a/index.html
+++ b/index.html
@@ -43,16 +43,15 @@
                 from initial wireframes to final deployment.
                 Let's build something extraordinary together....</p>
             <div class="social-media">
-                <a href="#"><i class='bxl bx-twitter-x'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
-                <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                <a href="#"><i class='bx bxl-figma'></i></a>
-                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="https://x.com/AnushkaP1818"><i class='bxl bx-twitter-x'></i></a>
+                <a href="https://github.com/MKPGAP"><i class='bx bxl-github'></i></a>
+                <a href="https://www.instagram.com/anushpereira9/"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/anushka-perera-55aa75241/"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://www.figma.com/"><i class='bx bxl-figma'></i></a>
+                <a href="https://www.facebook.com/AnushPereira9"><i class='bx bxl-facebook'></i></a>
 
-                
                 </div>
-            <a href="#" class="btn text-extrabold">Download CV</a>
+            <a href="https://drive.google.com/file/d/1Y6XL-IxVBK2s2Eh0Cbb4sctxc-FKAeaa/view?usp=sharing" class="btn text-extrabold">Download CV</a>
         </div>
         <div class="home-img">
             <img src="images/home.img.png" alt="Profile" class="widget-area">
