--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
 
     <!-- typed js -->
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> // typed js cdn link
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script> 
 
     <!-- js -->
     <script src="script.js"></script>
