Add Google Fonts import to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta property="og:title" content="Anushka Perera | Full-Stack Developer Portfolio">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=League+Spartan:wght@100..900&family=Lexend:wght@100..900&display=swap');</style>
     <meta property="og:description" content="Explore my latest web projects, UI/UX designs, and technical skills.">
     <meta property="og:image" content="images/portfolio-preview.png"> 
     <meta property="og:url" content="https://yourlink.com">
